# c_plus_plus_primer

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
docs/: 1.13.md  1.14.md  1.15_erros.md  1.16_read_unknown_number_of_inputs.md  1.17.md  1.18.md  1.19.md  1.1_file_naming_convention.md  1.2.md  1.20.md  1.20_sales_item.md  1.21.md  1.22.md  1.25.md  1.3.md  1.4.md  1.5.md  1.6.md  1.7.md  1.8_comment_pair.md  1.9.md  e1.1.md  e1.2.md
docs/1/: 1.10.md  1.11.md  1.12.md  1.14.md  1.15_errors.md  1.1_file_naming_convention.md  1.20_sales_item.md  1.21.md  1.22_sum_transactions.md  1.23.md  1.24.md  1.25.md  1.4.md  1.6.md  1.7.md  1.9.md
docs/2/: 2.1.md  2.2.md  2.3.md  2.39.md  2.4.md  2.40.md  2.41.md  2.42.md
exercises/: 1.10.cpp  1.18.cpp  1.21.cpp  1.21_infile_2  1.22.cpp  1.23.cpp  1.25.cpp  CMakeLists.txt
exercises/1/: 1.11.cpp  1.15.cpp  1.16.cpp  1.20.cpp  1.21.cpp  1.22.cpp  1.23.cpp  1.8.cpp  CMakeLists.txt
exercises/2/: 2.39.cpp  2.40.cpp  2.41_1.20.cpp  2.41_1.21.cpp  2.41_1.22.cpp  2.41_1.23.cpp  2.41_1.25.cpp  2.42_1.20.cpp  2.42_1.21.cpp  2.42_1.22.cpp  2.42_1.23.cpp  2.42_1.25.cpp  2.42_sales_data.h  CMakeLists.txt
tests/: CMakeLists.txt  sample.cpp
