add_executable(1.1 1.1.cpp)
add_executable(1.2 1.2.cpp)
add_executable(1.3 1.3.cpp)
add_executable(1.4 1.4.cpp)
add_executable(1.5 1.5.cpp)
add_executable(1.8 1.8.cpp)
add_executable(1.9 1.9.cpp)
add_executable(1.10 1.10.cpp)
add_executable(1.11 1.11.cpp)
add_executable(1.13_1 1.13_1.cpp)
add_executable(1.13_2 1.13_2.cpp)