add_executable(1.1 1.1.cpp)
add_executable(1.2 1.2.cpp)
add_executable(1.3 1.3.cpp)
add_executable(1.4 1.4.cpp)
add_executable(1.5 1.5.cpp)
add_executable(1.8 1.8.cpp)
add_executable(1.9 1.9.cpp)
add_executable(1.10 1.10.cpp)
add_executable(1.11 1.11.cpp)
add_executable(1.13_1 1.13_1.cpp)
add_executable(1.13_2 1.13_2.cpp)
add_executable(1.16 1.16.cpp)
add_executable(1.18 1.18.cpp)

add_executable(1.20 1.20.cpp)
target_include_directories(1.20 PUBLIC ${CMAKE_SOURCE_DIR})

add_executable(1.21 1.21.cpp)
target_include_directories(1.21 PUBLIC ${CMAKE_SOURCE_DIR})

add_executable(1.22 1.22.cpp)
target_include_directories(1.22 PUBLIC ${CMAKE_SOURCE_DIR})

add_executable(1.23 1.23.cpp)
target_include_directories(1.23 PUBLIC ${CMAKE_SOURCE_DIR})

add_executable(1.25 1.25.cpp)
target_include_directories(1.25 PUBLIC ${CMAKE_SOURCE_DIR})