add_executable(2.4 2.4.cpp)

add_executable(2.41_1.20 2.41_1.20.cpp)
add_executable(2.41_1.21 2.41_1.21.cpp)
add_executable(2.41_1.22 2.41_1.22.cpp)
add_executable(2.41_1.23 2.41_1.23.cpp)
add_executable(2.41_1.25 2.41_1.25.cpp)

add_executable(2.42_1.20 2.42_1.20.cpp)
add_executable(2.42_1.21 2.42_1.21.cpp)
add_executable(2.42_1.22 2.42_1.22.cpp)
add_executable(2.42_1.23 2.42_1.23.cpp)
add_executable(2.42_1.25 2.42_1.25.cpp)